# wave_height_from_IMU

./: LICENSE  README.md  find-peaks.py  local-extremes.py  pos-from-accel.py  test-1kHz.txt  test-data-no-noise.txt  test-data.txt  trochoidal_wave.py  trochoidal_wave.txt  trochoidal_wave_approximations.py  trocoidal_wave_approximations.py  wave.m  wave_height_from_IMU.py  wave_height_from_IMU_no_drift_correction.py
imu/: Cargo.toml
imu-python/: imu-python.py  quaternion.py  vector.py
imu/src/: main.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: libs.rs  main.rs  plot.rs
