[package]
name = "wave-height-imu"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
linux-embedded-hal = "0.3"
ahrs = "0.5.0"
bitflags = "1.0"
libm = { version = "0.2.1", optional = true }

[dependencies.nalgebra]
default-features = false
version = "0.30.1"

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.mpu9250]
version = "0.24.1"
default-features = false
features = ["i2c", "dmp"]


