[package]
name = "wave-height-from-imu-kalman"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulinalg = "0.4.1"
linearkalman = "0.1.3"
quaternion = "1.0.0"
csv = "1.1.6"

[dependencies.cpython]
version = "0.7.1"
default-features = false
features = ["python3-sys"]
